# bg-manager

./: Cargo.toml  README.md  justfile
i18n/en/: bg_manager.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  i18n.rs  main.rs  unique.rs
