[package]
name = "bg-manager"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Background manager for the COSMIC™ desktop"
repository = "https://github.com/pstroka/bg-manager"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
dominant_color = "0.4.0"

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "tokio",
    "wayland",
    "desktop",
]

[dependencies.cosmic-bg-config]
git = "https://github.com/pop-os/cosmic-bg"

[dependencies.cosmic-settings-wallpaper]
git = "https://github.com/pop-os/cosmic-settings"

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
